# multialign

./: .gitignore  align.scala  sentence-align-corpus.perl  sentence-multialign-corpus.perl
four/sv/: ep-11-06-23-014.txt
src/: Alignment.c++  Alignment.h++  CMakeLists.txt  Coordinate.c++  Coordinate.h++  CoordinateIterator.c++  CoordinateIterator.h++  Coordinates.c++  Coordinates.h++  Cost.h++  Costs.c++  Costs.h++  Dimensions.c++  Dimensions.h++  DimensionsIterator.c++  DimensionsIterator.h++  Distance.c++  Distance.h++  DynamicProgrammingTable.c++  DynamicProgrammingTable.h++  Europarl.c++  Europarl.h++  Gale_and_Church_1993.c++  Gale_and_Church_1993.h++  MultextEast.c++  MultextEast.h++  SentenceAligner.c++  SentenceAligner.h++  SentenceAlignments.c++  SentenceAlignments.h++  SentenceAlignments.unit_tests.c++  align.c++  coordinate.h++  cost.h++  hand_test.c++  multext.c++  run_unit_tests.c++  util.c++  util.h
tools/: split-sentences.perl
txt/bg/: ep-11-06-23-014.txt
txt/cs/: ep-11-06-23-014.txt
txt/el/: ep-11-06-23-014.txt
txt/et/: ep-11-06-23-014.txt
txt/fi/: ep-11-06-23-014.txt
txt/hu/: ep-11-06-23-014.txt
txt/it/: ep-11-06-23-014.txt
txt/lt/: ep-11-06-23-014.txt
txt/lv/: ep-11-06-23-014.txt
txt/nl/: ep-11-06-23-014.txt
txt/pl/: ep-11-06-23-014.txt
txt/ro/: ep-11-06-23-014.txt
txt/sk/: ep-11-06-23-014.txt
txt/sl/: ep-11-06-23-014.txt
txt/sv/: ep-11-06-23-014.txt
